Change --add-opens blocks to Aspectj, enable-preview by default